--- a/taxExpert/index.html
+++ b/taxExpert/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="wrapper">
@@ -50,22 +52,48 @@
             <div class="services-of">
                 <div class="box">
                     <i class="fa fa-database" aria-hidden="true"></i>
-                    <p>Tax Planning</p>
+                    <p class="title">Tax Planning</p>
                     <div class="divider"></div>
                     <p>Planning is the key to successfully and legally reducing your tax liability.</p>
                 </div>
                 <div class="box">
                     <i class="fa fa-calculator" aria-hidden="true"></i>
-                    <p>Bookkeeping</p>
+                    <p class="title">Bookkeeping</p>
                     <div class="divider"></div>
                     <p>We’ll create a chart of accounts to capture all your financial transactions.</p>
                 </div>
                 <div class="box">
                     <i class="fa fa-money" aria-hidden="true"></i>
-                    <p>Bank Reconciliation</p>
+                    <p class="title">Bank Reconciliation</p>
                     <div class="divider"></div>
                     <p>Every deposit and withdrawal aligns with entries into your accounting records.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="about">
+        <div class="wrapper">
+            <div class="about-us">
+                <p class="a-title">About Us</p>
+                <p class="a-desc">We are dedicated to providing professional service with the highest degree of honesty and integrity, and
+                    strive to add value to our tax and consulting services.</p>
+                <p class="check"><i class="fa fa-check" aria-hidden="true"></i>Highly Competent Professionals;<br><i class="fa fa-check" aria-hidden="true"></i>Affordable
+                    Prices;<br><i class="fa fa-check" aria-hidden="true"></i>High Successful Recovery.</p>
+                <button>Make an appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
+            </div>
+            <div class="counts">
+                <p class="num-box">
+                    <p class="number">23</p>
+                    <p class="details">Consultants</p>
+                </p>
+                <p class="num-box">
+                    <p class="number">546</p>
+                    <p class="details">Happy Clients</p>
+                </p>
+                <p class="num-box">
+                    <p class="number">17</p>
+                    <p class="details">Years of Experience</p>
+                </p>
             </div>
         </div>
     </section>
