--- a/taxExpert/index.html
+++ b/taxExpert/index.html
@@ -85,26 +85,120 @@
                 <p class="a-desc">We are dedicated to providing professional service with the highest degree of honesty and integrity, and
                     strive to add value to our tax and consulting services.</p>
                 <p class="check"><i class="fa fa-check" aria-hidden="true"></i>Highly Competent Professionals;<br><i class="fa fa-check" aria-hidden="true"></i>Affordable
-                    Prices;<br><i class="fa fa-check" aria-hidden="true"></i>High Successful Recovery.</p>
+                    Prices;
+                    <br><i class="fa fa-check" aria-hidden="true"></i>High Successful Recovery.</p>
                 <button>Make an appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
             </div>
             <div class="counts">
-                <p class="num-box">
+                <div class="num-box">
                     <p class="number">23</p>
                     <p class="details">Consultants</p>
-                </p>
-                <p class="num-box">
+                </div>
+                <div class="num-box">
                     <p class="number">546</p>
                     <p class="details">Happy Clients</p>
-                </p>
-                <p class="num-box">
+                </div>
+                <div class="num-box">
                     <p class="number">17</p>
                     <p class="details">Years of Experience</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="calculator">
+        <div class="wrapper">
+            <p class="title"><i class="fa fa-calculator" aria-hidden="true"></i> Tax Calculator</p>
+            <div class="cal-container">
+                <form action="/action_page.php">
+                    <div class="left">
+                        <p>Choose your business area</p>
+                        <select name="Retail">
+                            <option value="retail">Retail</option>
+                            <option value="all">All</option>
+                        </select>
+                        <p>Employees number</p>
+                        <select name="1-5">
+                            <option value="1-5">1-5</option>
+                            <option value="1-6">1-6</option>
+                        </select>
+                        <p class="total">Total Payment</p>
+                        <input type="text" name="" value="">
+                        <br><br>
+                    </div>
+                    <div class="right">
+                        <p>Country of residence</p>
+                        <select name="US Residence">
+                            <option value="us">US Residence</option>
+                            <option value="other">Other</option>
+                        </select>
+                        <p>Yearly income</p>
+                        <input type="text" name="" value="">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    <section id="testimonials">  
+        <div class="white"></div>
+            <div class="blue">
+            </div>
+       
+        <div class="wrapper">
+            <div class="t-container">
+                <p class="test">Testimonals</p>
+                <div class="img-container">
+                    <img src="../assets/test2.jpg" alt="">
+                    <img src="../assets/test1.jpg" alt="">
+                    <img src="../assets/test3.jpg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, sint necessitatibus ad temporibus illum
+                    excepturi impedit! Nemo voluptatem aspernatur harum magni, temporibus in laboriosam, rem necessitatibus,
+                    veritatis ab consectetur voluptate.
                 </p>
+                <p>Meagan Pau</p>
+            </div>
+        </div>
+    </section>
+    <section id="news">
+        <div class="wrapper">
+            <p class="news-title">Latest News</p>
+            <div class="news-container">
+                <div class="box">
+                    <img src="../assets/folder.jpg" alt="">
+                    <p class="headline">The Top 5 Tax Paper Downloads</p>
+                    <div class="details">
+                        <p class="date">June 14, 2016</p>
+                        <p class="writer"><span>BY</span> SAM KROMASTAIN</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="../assets/call.jpg" alt="">
+                    <p class="headline">Exploring American Taxes: Then & Now</p>
+                    <div class="details">
+                        <p class="date">June 20, 2016</p>
+                        <p class="writer"><span>BY</span> VANESSA IVES</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="../assets/calcu.jpg" alt="">
+                    <p class="headline">The Tax Consequences Of Brexit</p>
+                    <div class="details">
+                        <p class="date">June 23, 2016</p>
+                        <p class="writer"><span>BY</span> AMANDA SMITH</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="../assets/business.jpg" alt="">
+                    <p class="headline">What You Need to File Your Taxes This Year</p>
+                    <div class="details">
+                        <p class="date">June 12, 2016</p>
+                        <p class="writer"><span>BY</span> DAVID NICHOLSON</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 </body>
 <script src="https://use.fontawesome.com/a6dab44087.js"></script>
 
-</html>309
+</html>
