finished website except dropdown menu

--- a/taxExpert/index.html
+++ b/taxExpert/index.html
@@ -45,7 +45,7 @@
             <a id="search"><i class="fa fa-search" aria-hidden="true"></i></a>
         </div>
     </nav>
-    <section id="home">
+    <section id="home" class="home">
         <div class="wrapper">
             <h1>Our Clients Don't <br>Have Tax Problems</h1>
             <h3>Optimize tax costs using our years of experience</h3>
@@ -138,32 +138,30 @@
             </div>
         </div>
     </section>
-    <section id="testimonials">  
-        <div class="white"></div>
-            <div class="blue">
-            </div>
-       
-        <div class="wrapper">
-            <div class="t-container">
-                <p class="test">Testimonals</p>
-                <div class="img-container">
+    <section class="testimonials">
+        <div class="top">
+            <h4>Testimonials</h4>
+        </div>
+        <div class="bottom">
+            <div class="inner-container">
+                <div class="wrapper">
                     <img src="../assets/test2.jpg" alt="">
                     <img src="../assets/test1.jpg" alt="">
                     <img src="../assets/test3.jpg" alt="">
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, sint necessitatibus ad temporibus illum
-                    excepturi impedit! Nemo voluptatem aspernatur harum magni, temporibus in laboriosam, rem necessitatibus,
-                    veritatis ab consectetur voluptate.
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, sint necessitatibus ad temporibus illum excepturi
+                    impedit! Nemo voluptatem aspernatur harum magni, temporibus in laboriosam, rem necessitatibus, veritatis
+                    ab consectetur voluptate.
                 </p>
-                <p>Meagan Pau</p>
+                <h5>Meagan Pau</h5>
+                </div>
             </div>
         </div>
     </section>
-    <section id="news">
+    <section id="news" class="news">
         <div class="wrapper">
             <p class="news-title">Latest News</p>
             <div class="news-container">
-                <div class="box">
+                <div class="first box">
                     <img src="../assets/folder.jpg" alt="">
                     <p class="headline">The Top 5 Tax Paper Downloads</p>
                     <div class="details">
@@ -171,7 +169,7 @@
                         <p class="writer"><span>BY</span> SAM KROMASTAIN</p>
                     </div>
                 </div>
-                <div class="box">
+                <div class="second box">
                     <img src="../assets/call.jpg" alt="">
                     <p class="headline">Exploring American Taxes: Then & Now</p>
                     <div class="details">
@@ -179,7 +177,7 @@
                         <p class="writer"><span>BY</span> VANESSA IVES</p>
                     </div>
                 </div>
-                <div class="box">
+                <div class="third box">
                     <img src="../assets/calcu.jpg" alt="">
                     <p class="headline">The Tax Consequences Of Brexit</p>
                     <div class="details">
@@ -187,7 +185,7 @@
                         <p class="writer"><span>BY</span> AMANDA SMITH</p>
                     </div>
                 </div>
-                <div class="box">
+                <div class="fourth box">
                     <img src="../assets/business.jpg" alt="">
                     <p class="headline">What You Need to File Your Taxes This Year</p>
                     <div class="details">
@@ -198,6 +196,43 @@
             </div>
         </div>
     </section>
+    <section class="last-part">
+        <div class="wrapper">
+            <div class="first section">
+                <h4>About us</h4>
+                <p>Our firm has been providing expert tax and consulting services to individuals and small businesses throughout
+                    the country since 1989.
+                </p>
+                <div class="icons">
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                    +1(409) 987-5874 <i class="fa fa-facebook" aria-hidden="true"></i>
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                    <i class="fa fa-google-plus" aria-hidden="true"></i>
+                </div>
+            </div>
+            <div class="second section">
+                <div class="left">
+                    <h4>QUICK LINKS</h4>
+                    <p><span><i class="fa fa-angle-right" aria-hidden="true"></i></span>Home</p>
+                    <p><span><i class="fa fa-angle-right" aria-hidden="true"></i></span>Services</p>
+                    <p><span><i class="fa fa-angle-right" aria-hidden="true"></i></span>Careers</p>
+                    <p><span><i class="fa fa-angle-right" aria-hidden="true"></i></span>Blog</p>
+                </div>
+                <div class="right">
+                    <p><span><i class="fa fa-angle-right" aria-hidden="true"></i></span>About us</p>
+                    <p><span><i class="fa fa-angle-right" aria-hidden="true"></i></span>Contacts</p>
+                    <p><span><i class="fa fa-angle-right" aria-hidden="true"></i></span>Appointment</p>
+                </div>
+            </div>
+            <div class="third section">
+                <h4>Subscribe</h4>
+                <p>Get the latest updates and offers.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>&copy; 2017 TaxExpert. Privact Policy</p>
+    </footer>
 </body>
 <script src="https://use.fontawesome.com/a6dab44087.js"></script>
 
